--- a/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.html
+++ b/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.html
@@ -351,7 +351,7 @@
 
               <div class="d-flex align-items-center border-top pt-3" style="font-size: 18px; font-weight: 500;">
                 <!-- View Profile Button -->
-                <a href="profile-details.html" class="custom-btn btn me-2"
+                <a  [routerLink]="['/profile', client.id,lawyerId]" class="custom-btn btn me-2"
                    style="background-color: #28a745; color: #fff; padding: 8px 16px; font-size: 14px; border-radius: 8px; text-decoration: none; transition: background-color 0.3s ease;">
                   View Profile
                 </a>
