--- a/src/app/Components/allprofiles/allprofiles.component.html
+++ b/src/app/Components/allprofiles/allprofiles.component.html
@@ -1,93 +1,314 @@
-<div class="col-span-1">
-  <div class="grid gap-5 lg:gap-7.5">
-    <div class="card min-w-full" style="background-color: #e5e0f2;" >
-      <div class="card-header" style="background-color: #4c3575; color:#f0f8ff">
-        <h3 class="card-title">
-          Personal Info
-        </h3>
-      </div>
-      <div class="card-table scrollable-x-auto pb-3" >
-        <table class="table align-middle text-sm text-gray-500">
-          <tr>
-            <td class="py-2 min-w-28 text-gray-600 font-normal">
-              Photo
-            </td>
-            <td class="py-2 text-gray700 font-normal min-w-32 text-2sm">
-
-            </td>
-            <td class="py-2 text-center">
-              <div class="flex justify-center items-center" style="border: none; /* Remove any border */
-  outline: none; /* Remove any outline */">
-                <img
-                  class="rounded-full border-2 border-success profile-pic"
-                  [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'"
-                  alt="Profile Picture"
-                  style="width:90px"
-                >
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="py-2 text-gray-600 font-normal">
-              Name
-            </td>
-            <td class="py-2 text-gray-800 font-normaltext-sm">
-              {{lawyer?.firstName}} {{lawyer?.familyName}}
-            </td>
-            <td class="py-2 text-center">
-
-            </td>
-          </tr>
-          <tr>
-            <td class="py-3 text-gray-600 font-normal">
-              Phone Number
-            </td>
-            <td class="py-3 text-gray-700 text-sm font-normal">
-              {{lawyer?.phoneNumber}}
-            </td>
-            <td class="py-3 text-center">
 
 
-            </td>
-          </tr>
-          <tr>
-            <td class="py-3 text-gray-600 font-normal">
-              Birthday
-            </td>
-            <td class="py-3 text-gray-700 text-sm font-normal">
-              {{lawyer?.birthdate}}
-            </td>
-            <td class="py-3 text-center">
+<!-- CSS FILES -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 
-            </td>
-          </tr>
-          <tr>
-            <td class="py-3 text-gray-600 font-normal">
-              Email
-            </td>
-            <td class="py-3 text-gray-700 text-sm font-normal">
-              {{lawyer?.email}}
-            </td>
-            <td class="py-3 text-center">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-            </td>
-          </tr>
-          <tr>
-            <td class="py-3">
-              Office Address
-            </td>
-            <td class="py-3 text-gray-700 text-2sm font-normal">
-              {{lawyer?.office_adress}}
-            </td>
-            <td class="py-3 text-center">
+<link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">
 
-            </td>
-          </tr>
-        </table>
-      </div>
+<link href="../Lawyer/lawyer-view/css/bootstrap.min.css" rel="stylesheet">
 
-    </div>
+<link href="../Lawyer/lawyer-view/css/bootstrap-icons.css" rel="stylesheet">
+
+<link href="../Lawyer/lawyer-view/css/tooplate-mini-finance.css" rel="stylesheet">
+<div class="sidebar px-4 py-4 py-md-5 me-0 d-md-block d-none" id="sidebar">
+  <div class="d-flex flex-column h-100">
+    <a class="mb-0 brand-icon">
+      <span class="logo-icon">
+        <img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png"
+             style="width: 200px; height:150px;" />
+      </span>
+    </a>
+
+    <ul class="menu-list flex-grow-1 mt-3">
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId]">
+          <mat-icon>home</mat-icon> <span>Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'clients']">
+          <mat-icon>people</mat-icon> <span>Clients</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'cases']">
+          <mat-icon>gavel</mat-icon> <span>Cases</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'consultations']">
+          <mat-icon>event</mat-icon> <span>Consultations</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;"  class="m-link" [routerLink]="['/lawyer', lawyerId, 'assistant']">
+          <mat-icon>group</mat-icon> <span>Assistant</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'invoice']">
+          <mat-icon>description</mat-icon> <span>Invoice</span>
+        </a>
+      </li>
+    </ul>
+
+    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
+      Logout <mat-icon>exit_to_app</mat-icon>
+    </button>
+  </div>
+</div>
+<button class="d-md-none"
+        style="position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1050;
+    color: white;
+    background-color: #2c3e50;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;"
+        (click)="toggleSidebar()">
+  ☰
+</button>
+
+<header class="navbar sticky-top flex-md-nowrap">
+  <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">
+    <span class="fw-bold" style="margin-left:300px;">LawyerSoft</span>
 
   </div>
 
-</div>
+
+
+  <div class="navbar-nav me-lg-2" >
+    <div class="nav-item text-nowrap d-flex align-items-center">
+      <div class="dropdown ps-3 position-relative">
+        <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">
+          <i class="bi-bell fs-3"></i>
+          <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">
+            <span class="visually-hidden">New alerts</span>
+          </span>
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink" >
+          <small>Notifications</small>
+
+          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">
+            <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
+              <div class="notifications-icon-wrap bg-warning">
+                <i class="notifications-icon bi-envelope-fill"></i>
+              </div>
+
+              <div class="ms-2">
+                <span class="fw-bold">{{ notification.title }}</span>
+                <div class="text-muted">
+                  {{ notification.client.firstName }} {{ notification.client.familyName }}
+                  <br>
+                  {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
+                </div>
+
+                <div class="mt-2">
+                  <!-- Show Accept and Decline buttons only if the request is PENDING -->
+                  <ng-container *ngIf="notification.status === 'PENDING'">
+                    <button class="btn btn-success btn-sm me-2" (click)="acceptRequest(notification.id)">Accept</button>
+                    <button class="btn btn-danger btn-sm" (click)="declineRequest(notification.id)">Decline</button>
+                  </ng-container>
+
+                  <!-- Show Accepted or Rejected status -->
+                  <ng-container *ngIf="notification.status === 'ACCEPTED'">
+                    <span class="text-success">Accepted</span>
+                  </ng-container>
+
+                  <!-- Show Declined status -->
+                  <ng-container *ngIf="notification.status === 'DECLINED'">
+                    <span class="text-danger">Declined</span>
+                  </ng-container>
+                </div>
+              </div>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+
+      <div class="dropdown px-3 position-relative">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img [src]="profilePic || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end bg-white shadow" style="max-width: 250px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <li>
+            <div class="dropdown-menu-profile-thumb d-flex" style="padding: 8px;">
+              <img [src]="profilePic || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="" style="width: 40px; height: 40px; object-fit: cover;">
+              <div class="d-flex flex-column">
+                <small>{{ lawyer?.firstName }}</small>
+                <a href="#">{{lawyer?.email}}</a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <a class="dropdown-item" [routerLink]="['/lawyer', lawyerId]">
+              <i class="bi-person me-2"></i>
+              Profile
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="setting.html">
+              <i class="bi-gear me-2"></i>
+              Settings
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="help-center.html">
+              <i class="bi-question-circle me-2"></i>
+              Help
+            </a>
+          </li>
+
+          <li class="border-top mt-3 pt-2 mx-4">
+            <a class="dropdown-item ms-0 me-0" (click)="onLogout()">
+              <i class="bi-box-arrow-left me-2"></i>
+              Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+
+<main class="main-wrapper col-md-9 ms-sm-auto py-4 col-lg-9 px-md-4 border-start">
+  <div class="title-group mb-3">
+    <h1 class="h2 mb-0">Profile</h1>
+  </div>
+
+  <div class="row my-4">
+    <div class="col-lg-7 col-12">
+      <div class="custom-block custom-block-profile">
+        <div class="row">
+          <div class="col-lg-12 col-12 mb-3">
+            <h3 style="font-size:20px;">General</h3>
+          </div>
+
+          <div class="col-lg-3 col-12 mb-4 mb-lg-0">
+            <div class="custom-block-profile-image-wrap">
+              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="custom-block-profile-image img-fluid" alt="">
+
+
+            </div>
+          </div>
+
+          <div class="col-lg-9 col-12">
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Name:</strong>
+
+              <span>{{client?.firstName}} {{client?.familyName}}</span>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Email:</strong>
+
+              <a href="#">
+                {{client?.email}}
+              </a>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Phone:</strong>
+
+              <a href="#">
+                {{client?.phoneNumber }}
+              </a>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Birthday:</strong>
+
+              <span> {{client?.birthdate }}</span>
+            </p>
+
+            <p class="d-flex flex-wrap">
+              <strong>Address:</strong>
+
+              <span>                {{client?.adress }}
+</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="custom-block custom-block-profile bg-white">
+        <h6 class="mb-4">Recent Cases</h6>
+
+        <div *ngIf="cases.length === 0" class="no-cases-message text-center text-muted fs-5 " style="font-size: 18px; color: #999;">
+          <p>No cases available</p>
+        </div>
+
+        <!-- Loop through cases and display them -->
+        <div *ngFor="let cas of cases" class="d-flex align-items-center border-bottom pb-3 mb-3">
+          <div *ngIf="cas.client?.id==userId">
+            <div class="d-flex align-items-center">
+              <mat-icon class="exchange-image img-fluid fs-3" style="font-size: 30px; color: #3f51b5;">gavel</mat-icon>
+              <div class="ms-2">
+                <p>{{ cas.caseType }}</p>
+                <h6>{{ cas.client?.firstName }} {{ cas.client?.familyName }}</h6>
+              </div>
+            </div>
+
+            <div class="ms-auto text-center">
+              <small>Status</small>
+              <h6>{{ cas.caseStatus }}</h6>
+            </div>
+
+            <div class="ms-auto text-center">
+              <small>Date</small>
+              <h6>{{ cas.start }}</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-5 col-12">
+      <div class="custom-block custom-block-contact">
+        <h6 class="mb-4" style="font-size:30px;">Hearing History</h6>
+
+
+        <div *ngFor="let case of cases" class="d-flex align-items-center border-bottom pb-3 mb-3">
+          <ng-container *ngIf="case.hearings && case.hearings.length > 0">
+            <a href="#">
+              <mat-icon class="profile-image" style="font-size: 50px; color: #3f51b5;">balance</mat-icon>
+            </a>
+
+            <div class="ms-3">
+              <!-- Loop through each hearing in the current case -->
+              <div *ngFor="let hearing of case.hearings">
+                <h6 style="color:white; font-size: 20px;">
+                  Date: {{ hearing.start ? (hearing.start | date: 'short') : 'No Date Available' }}
+                </h6>
+                <p style="color:white; font-size: 18px;">Title: {{ hearing.title || 'No Title' }}</p>
+
+                <!-- Add a line to separate hearings -->
+                <hr style="border: 1px solid #fff; margin: 10px 0;">
+              </div>
+            </div>
+          </ng-container>
+        </div>
+
+
+        <a href="#" class="btn custom-btn custom-btn-bg-white mt-3">
+          Chat with us
+        </a>
+      </div>
+    </div>
+  </div>
+
+</main>
