--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,231 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--  <title>Lawyer Profile</title>-->
+<!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
+<!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">-->
+<!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
+<!--  <meta charset="utf-8"/>-->
+<!--  <meta content="follow, index" name="robots"/>-->
+<!--  <link href="user-profile.html" rel="canonical"/>-->
+<!--  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>-->
+<!--  <meta content="User profile page, powered by Tailwind CSS" name="description"/>-->
+<!--  <meta content=" keenthemes" name="twitter:site"/>-->
+<!--  <meta content=" keenthemes" name="twitter:creator"/>-->
+<!--  <meta content="summary_large_image" name="twitter:card"/>-->
+<!--  <meta content="Metronic - Tailwind CSS User Profile" name="twitter:title"/>-->
+<!--  <meta content="User profile page, powered by Tailwind CSS" name="twitter:description"/>-->
+<!--  <meta content="/static/metronic/tailwind/dist/assets/media/app/og-image.png" name="twitter:image"/>-->
+<!--  <meta content="https://keenthemes.com/metronic/tailwind/demo1/account/home/user-profile" property="og:url"/>-->
+<!--  <meta content="en_US" property="og:locale"/>-->
+<!--  <meta content="website" property="og:type"/>-->
+<!--  <meta content=" keenthemes" property="og:site_name"/>-->
+<!--  <meta content="Metronic - Tailwind CSS User Profile" property="og:title"/>-->
+<!--  <meta content="User profile page, powered by Tailwind CSS" property="og:description"/>-->
+<!--  <meta content="/static/metronic/tailwind/dist/assets/media/app/og-image.png" property="og:image"/>-->
+<!--  <link rel="preconnect" href="https://fonts.googleapis.com">-->
+
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+
+<!--  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">-->
+
+<!--  <link href="../../Lawyer/lawyer-view/css/bootstrap.min.css" rel="stylesheet">-->
+
+<!--  <link href="../../Lawyer/lawyer-view/css/bootstrap-icons.css" rel="stylesheet">-->
+
+<!--  <link href="../../Lawyer/lawyer-view/css/tooplate-mini-finance.css" rel="stylesheet">-->
+<!--  &lt;!&ndash; Google tag (gtag.js) &ndash;&gt;-->
+<!--  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-52YZ3XGZJ6">-->
+
+<!--  </script>-->
+<!--  <script>-->
+<!--    document.querySelector('.menu-toggle').addEventListener('click', function() {-->
+<!--      const dropdown = this.nextElementSibling;-->
+<!--      dropdown.classList.toggle('hidden');-->
+<!--    });-->
+
+<!--  </script>-->
+<!--  <script>-->
+<!--    window.dataLayer = window.dataLayer || [];-->
+<!--    function gtag(){dataLayer.push(arguments);}-->
+<!--    gtag('js', new Date());-->
+
+<!--    gtag('config', 'G-52YZ3XGZJ6');-->
+<!--  </script>-->
+<!--</head>-->
+<!--<body>-->
+<!--<header style="background-color: #4c3575;" class="header fixed top-0 z-10 left-0 right-0 flex items-stretch shrink-0 bg-[&#45;&#45;tw-page-bg] dark:bg-[&#45;&#45;tw-page-bg-dark]" data-sticky="true" data-sticky-class="shadow-sm" data-sticky-name="header" id="header">-->
+<!--  &lt;!&ndash; Container &ndash;&gt;-->
+
+<!--  &lt;!&ndash; End of Breadcrumbs &ndash;&gt;-->
+
+<!--  &lt;!&ndash; Topbar &ndash;&gt;-->
+<!--  &lt;!&ndash; End of Topbar &ndash;&gt;-->
+
+<!--  &lt;!&ndash; End of Container &ndash;&gt;-->
+<!--</header>-->
+
+
+
+
+
+<!--<header class="navbar sticky-top flex-md-nowrap">-->
+<!--  <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">-->
+
+<!--  </div>-->
+
+
+
+
+
+<!--  <div class="navbar-nav me-lg-2">-->
+<!--    <div class="nav-item text-nowrap d-flex align-items-center">-->
+<!--      <div class="dropdown ps-3">-->
+<!--        <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">-->
+<!--          <i class="bi-bell" style="font-size: 20px;"></i>-->
+<!--          <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">-->
+<!--                                <span class="visually-hidden">New alerts</span>-->
+<!--                            </span>-->
+<!--        </a>-->
+
+<!--        <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink" >-->
+<!--          <small>Notifications</small>-->
+
+<!--          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">-->
+<!--            <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">-->
+<!--              <div class="notifications-icon-wrap bg-warning">-->
+<!--                <i class="notifications-icon bi-envelope-fill"></i>-->
+<!--              </div>-->
+
+<!--              <div class="ms-2">-->
+<!--                <span class="fw-bold">{{ notification.title }}</span>-->
+<!--                <div class="text-muted">-->
+<!--                  {{ notification.client.firstName }} {{ notification.client.familyName }}-->
+<!--                  <br>-->
+<!--                  {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}-->
+<!--                </div>-->
+<!--                <div class="mt-2">-->
+<!--                  &lt;!&ndash; Show Accept and Decline buttons only if the request is PENDING &ndash;&gt;-->
+<!--                  <ng-container *ngIf="notification.status === 'PENDING'">-->
+<!--                    <button class="btn btn-success btn-sm me-2" (click)="acceptRequest(notification.id)">Accept</button>-->
+<!--                    <button class="btn btn-danger btn-sm" (click)="declineRequest(notification.id)">Decline</button>-->
+<!--                  </ng-container>-->
+
+<!--                  &lt;!&ndash; Show Accepted or Rejected status &ndash;&gt;-->
+<!--                  <ng-container *ngIf="notification.status === 'ACCEPTED'">-->
+<!--                    <span class="text-success">Accepted</span>-->
+<!--                  </ng-container>-->
+
+<!--                  &lt;!&ndash; Show Declined status &ndash;&gt;-->
+<!--                  <ng-container *ngIf="notification.status === 'DECLINED'">-->
+<!--                    <span class="text-danger">Declined</span>-->
+<!--                  </ng-container>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </a>-->
+<!--          </li>-->
+
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <div class="dropdown px-3">-->
+<!--        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">-->
+<!--        </a>-->
+
+
+<!--        <ul class="dropdown-menu bg-white shadow">-->
+<!--          <li>-->
+<!--            <div class="dropdown-menu-profile-thumb d-flex">-->
+<!--              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="">-->
+
+<!--              <div class="d-flex flex-column">-->
+<!--                <small>{{ Client?.firstName }}</small>-->
+<!--                <a href="#">{{Client?.email}}</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </li>-->
+
+<!--          <li>-->
+<!--            <a class="dropdown-item" [routerLink]="['/client', ClientId]">-->
+<!--              <i class="bi-person me-2"></i>-->
+<!--              Profile-->
+<!--            </a>-->
+<!--          </li>-->
+
+<!--          <li>-->
+<!--            <a class="dropdown-item" href="setting.html">-->
+<!--              <i class="bi-gear me-2"></i>-->
+<!--              Settings-->
+<!--            </a>-->
+<!--          </li>-->
+
+<!--          <li>-->
+<!--            <a class="dropdown-item" href="help-center.html">-->
+<!--              <i class="bi-question-circle me-2"></i>-->
+<!--              Help-->
+<!--            </a>-->
+<!--          </li>-->
+
+<!--          <li class="border-top mt-3 pt-2 mx-4">-->
+<!--            <a class="dropdown-item ms-0 me-0" (click)="onLogout()">-->
+<!--              <i class="bi-box-arrow-left me-2"></i>-->
+<!--              Logout-->
+<!--            </a>-->
+<!--          </li>-->
+
+<!--        </ul>-->
+<!--      </div>-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--</header>-->
+<!--<div class="sidebar px-4 py-4 py-md-5 me-0"-->
+
+
+
+<!--&gt;-->
+<!--  <div class="d-flex flex-column h-100">-->
+<!--    <a class="mb-0 brand-icon">-->
+<!--<span class="logo-icon">-->
+<!--<img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />-->
+
+<!--</span>-->
+
+
+<!--    </a>-->
+<!--    <ul class="menu-list flex-grow-1 mt-3">-->
+<!--      <li>-->
+<!--        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" [routerLink]="['/client', ClientId]">-->
+<!--          <i class="icofont-home fs-5"></i> <mat-icon>home</mat-icon><span>Dashboard</span>-->
+<!--          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>-->
+<!--        </a>-->
+
+<!--      </li>-->
+
+<!--      <li>-->
+<!--        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', ClientId, 'case']">-->
+<!--          <i class="icofont-ticket"></i><mat-icon>gavel</mat-icon> <span>Cases</span>-->
+<!--          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>-->
+<!--        </a>-->
+<!--      </li>-->
+
+<!--      <li>-->
+<!--        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', ClientId, 'consultations']">-->
+<!--          <i class="icofont-ticket"></i><mat-icon>event</mat-icon> <span>Consultations</span>-->
+<!--          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>-->
+<!--        </a>-->
+<!--      </li>-->
+
+<!--    </ul>-->
+<!--    <button class="btn btn-danger" (click)="onLogout()">Logout-->
+<!--      <span class="ms-2"> <mat-icon>exit_to_app</mat-icon>-->
+<!--</span>-->
+<!--    </button>-->
+<!--  </div>-->
+<!--</div>-->
+
 <!--<div class="container-fluid" style=" background:#ececec; padding-top:150px; padding-left:500px;">-->
 <!--  <div class="container-xl px-4 mt-4"  >-->
 <!--    &lt;!&ndash; Account page navigation&ndash;&gt;-->
@@ -24,7 +252,7 @@
 <!--        <div class="card mb-4" style="border: 1px solid #ccc; border-radius: 8px;">-->
 <!--          <div class="card-header" style="font-weight: bold;background-color: #4c3575;color:white">Account Details</div>-->
 <!--          <div class="card-body">-->
-<!--            <form [formGroup]="lawyerForm" (ngSubmit)="updateProfile()">-->
+<!--            <form [formGroup]="ClientForm" (ngSubmit)="updateProfile()">-->
 <!--              <div class="row gx-3 mb-3">-->
 <!--                &lt;!&ndash; Form Group (first name)&ndash;&gt;-->
 <!--                <div class="col-md-6">-->
@@ -41,8 +269,8 @@
 <!--              <div class="row gx-3 mb-3">-->
 <!--                &lt;!&ndash; Form Group (phone number)&ndash;&gt;-->
 <!--                <div class="col-md-6">-->
-<!--                  <label class="small mb-1" for="inputPhone">Phone number</label>-->
-<!--                  <input class="form-control" id="inputPhone" formControlName="phoneNumber" type="tel" placeholder="Enter your phone number" style="border: 1px solid #ccc;">-->
+<!--                  <label class="small mb-1" for="phoneNumber">Phone number</label>-->
+<!--                  <input class="form-control" id="phoneNumber" formControlName="phoneNumber" type="tel" placeholder="Enter your phone number" style="border: 1px solid #ccc;">-->
 <!--                </div>-->
 <!--                &lt;!&ndash; Form Group (birthday)&ndash;&gt;-->
 <!--                <div class="col-md-6">-->
@@ -54,8 +282,8 @@
 <!--              <div class="row gx-3 mb-3">-->
 <!--                &lt;!&ndash; Form Group (office address)&ndash;&gt;-->
 <!--                <div class="col-md-6">-->
-<!--                  <label class="small mb-1" for="inputOrgName">Office Address</label>-->
-<!--                  <input class="form-control" id="inputOrgName" formControlName="office_adress" type="text" placeholder="Enter your office address" style="border: 1px solid #ccc;">-->
+<!--                  <label class="small mb-1" for="inputOrgName">adress</label>-->
+<!--                  <input class="form-control" id="inputOrgName" formControlName="adress" type="text" placeholder="Enter your  address" style="border: 1px solid #ccc;">-->
 <!--                </div>-->
 <!--                &lt;!&ndash; Form Group (password)&ndash;&gt;-->
 <!--                <div class="col-md-6">-->
@@ -78,3 +306,7 @@
 <!--  </div>-->
 
 <!--</div>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>-->
+<!--</body>-->
+<!--</html>-->
