--- a/src/app/Components/chatbot/chatbot.component.html
+++ b/src/app/Components/chatbot/chatbot.component.html
@@ -1,8 +1,9 @@
 <div class="chat-container">
   <!-- Floating chat button -->
   <div class="chat-button" (click)="toggleChat()">
-    <i class="material-icons">chat</i>
+    <img src="./assets/bot.png" alt="chat icon" class="chat-icon">
   </div>
+
 
   <!-- Chat window -->
   <div class="chat-window" *ngIf="isChatOpen">
