--- a/src/app/Components/Client/case-details-client/case-details-client.component.html
+++ b/src/app/Components/Client/case-details-client/case-details-client.component.html
@@ -241,15 +241,15 @@
         <div class="custom-col-right">
           <div class="custom-job-thumb custom-job-thumb-detail-box bg-white shadow-lg rounded-card">
             <div class="custom-flex-wrapper">
-              <div class="custom-job-image-wrap">
-                <img [src]="case.lawyer?.image || 'http://bootdey.com/img/Content/avatar/avatar1.png'"
+              <div class="custom-job-image-wrap" *ngFor="let lawyer of lawyers">
+                <img [src]="profileImageLawyer || 'http://bootdey.com/img/Content/avatar/avatar1.png'"
                      class="custom-job-image"
                      alt=""
                      style="width: 200px; height: 200px; object-fit: cover;">
-                <p class="mb-0">{{ case.client?.firstName }} {{ case.client?.familyName }}</p>
+
               </div>
             </div>
-
+<div *ngFor="let lawyer of lawyers">
             <h6 class="mt-3 mb-2 custom-heading">About the Lawyer</h6>
             <p><i class="custom-icon bi-person me-1"></i> Name: {{ lawyer.firstName }} {{ lawyer.familyName }}</p>
 
@@ -270,6 +270,7 @@
               <i class="custom-icon bi-envelope me-1"></i>
               <a href="mailto:info@yourgmail.com" class="site-footer-link"><p>{{ lawyer.email }}</p></a>
             </p>
+</div>
           </div>
         </div>
       </div>
