--- a/src/app/Components/Client/client-lawyer/client-lawyer.component.html
+++ b/src/app/Components/Client/client-lawyer/client-lawyer.component.html
@@ -1,57 +1,228 @@
-<div class="blank-layout-container justify-content-center align-items-center bg-light-primary"
-     style="min-height: 100vh; background-image: url('./assets/elegant-frame-border-background-with-judge-concept-featuring-scales-justice-ornate-design-elements_43969-51095-transformed.jpeg'); background-size: cover; background-position: center;">
-  <div
-    class="position-relative row w-100 h-100 justify-content-center"
-    style="border-radius: 15px; padding: 40px; background: transparent;"
-  >
-    <div class="col-lg-4 d-flex align-items-center">
-      <mat-card class="cardWithShadow boxed-auth" style="box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); border-radius: 12px; background-color: white;">
-        <mat-card-content class="p-32" style="padding: 32px;">
-          <div class="text-center">
-            <a [routerLink]="['/dashboard']">
-              <img
-                src="./assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 150px"
-                class="align-middle m-2"
-                alt="logo"
-              />
-            </a>
-          </div>
 
-          <form class="m-t-30" style="margin-top: 30px;">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-            >Username</mat-label>
-            <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
-            </mat-form-field>
 
-            <!-- password -->
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-            >Password</mat-label>
-            <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
-            </mat-form-field>
+<!-- CSS FILES -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 
-            <div class="d-flex align-items-center m-b-12">
-              <mat-checkbox color="primary">Remember this Device</mat-checkbox>
-              <a
-                [routerLink]="['/']"
-                class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14"
-              >Forgot Password ?</a>
-            </div>
-            <a [routerLink]="['/']" mat-flat-button color="primary" class="w-100">
-              Sign In
-            </a>
-          </form>
-          <span class="d-block f-w-500 text-center m-t-24"
-          >New to Modernize?
-            <a
-              [routerLink]="['/authentication/register']"
-              class="text-decoration-none text-primary f-w-500 f-s-14"
-            >
-              Create an account</a>
-          </span>
-        </mat-card-content>
-      </mat-card>
-    </div>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">
+
+<link href="../../Lawyer/lawyer-view/css/bootstrap.min.css" rel="stylesheet">
+
+<link href="../../Lawyer/lawyer-view/css/bootstrap-icons.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+<link href="../../Lawyer/lawyer-view/css/tooplate-mini-finance.css" rel="stylesheet">
+<div class="sidebar px-4 py-4 py-md-5 me-0"
+
+
+
+>
+  <div class="d-flex flex-column h-100">
+    <a class="mb-0 brand-icon">
+<span class="logo-icon">
+<img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />
+
+</span>
+
+
+    </a>
+    <ul class="menu-list flex-grow-1 mt-3">
+      <li>
+        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" [routerLink]="['/client', clientId]">
+          <i class="icofont-home fs-5"></i> <mat-icon>home</mat-icon><span>Dashboard</span>
+          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
+        </a>
+
+      </li>
+
+
+      <li>
+        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', case, 'case']">
+          <i class="icofont-ticket"></i><mat-icon>gavel</mat-icon> <span>Cases</span>
+          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
+        </a>
+      </li>
+
+      <li>
+        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', clientId, 'consultations']">
+          <i class="icofont-ticket"></i><mat-icon>event</mat-icon> <span>Consultations</span>
+          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
+        </a>
+      </li>
+
+    </ul>
+    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
+      Logout
+      <span class="ms-2">
+    <mat-icon style="vertical-align: middle;">exit_to_app</mat-icon>
+  </span>
+    </button>
+
   </div>
 </div>
+<button class="d-md-none"
+        style="position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1050;
+    color: white;
+    background-color: #2c3e50;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;"
+        (click)="toggleSidebar()">
+  ☰
+</button>
+
+<header class="navbar sticky-top flex-md-nowrap">
+  <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">
+  </div>
+
+  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="navbar-nav me-lg-2">
+    <div class="nav-item text-nowrap d-flex align-items-center">
+      <div class="dropdown ps-3 position-relative">
+        <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">
+          <i class="bi-bell"></i>
+          <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">
+            <span class="visually-hidden">New alerts</span>
+          </span>
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink" style="max-width: 300px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <small>Notifications</small>
+
+
+
+        </ul>
+      </div>
+
+      <div class="dropdown px-3 position-relative">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end bg-white shadow" style="max-width: 250px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <li>
+            <div class="dropdown-menu-profile-thumb d-flex" style="padding: 8px;">
+              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="" style="width: 40px; height: 40px; object-fit: cover;">
+              <div class="d-flex flex-column">
+                <small>{{ client?.firstName }}</small>
+                <a href="#">{{client?.email}}</a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <a class="dropdown-item" [routerLink]="['/client', clientId]">
+              <i class="bi-person me-2"></i>
+              Profile
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="setting.html">
+              <i class="bi-gear me-2"></i>
+              Settings
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="help-center.html">
+              <i class="bi-question-circle me-2"></i>
+              Help
+            </a>
+          </li>
+
+          <li class="border-top mt-3 pt-2 mx-4">
+            <a class="dropdown-item ms-0 me-0" (click)="onLogout()">
+              <i class="bi-box-arrow-left me-2"></i>
+              Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+
+<main class="main-wrapper col-md-9 ms-sm-auto py-4 col-lg-9 px-md-4 border-start">
+  <div class="title-group mb-3">
+    <h1 class="h2 mb-0">Profile</h1>
+  </div>
+
+  <div class="row my-4">
+    <div class="col-lg-7 col-12">
+      <div class="custom-block custom-block-profile">
+        <div class="row">
+          <div class="col-lg-12 col-12 mb-3">
+            <h3 style="font-size:20px;">General</h3>
+          </div>
+
+          <div class="col-lg-3 col-12 mb-4 mb-lg-0">
+            <div class="custom-block-profile-image-wrap" >
+              <img [src]="profileImageLawyer || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="custom-block-profile-image img-fluid" alt="">
+
+
+
+            </div>
+          </div>
+
+          <div *ngFor="let lawyer of lawyers" class="col-lg-9 col-12">
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Name:</strong>
+              <span>{{ lawyer.firstName }} {{ lawyer.familyName }}</span>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Email:</strong>
+              <a href="#">
+                {{ lawyer.email }}
+              </a>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Phone:</strong>
+              <a href="#">
+                {{ lawyer.phoneNumber }}
+              </a>
+            </p>
+
+            <p class="d-flex flex-wrap mb-2">
+              <strong>Specialization:</strong>
+              <span>{{ lawyer.speciality }}</span>
+            </p>
+
+            <hr> <!-- Separator between lawyers -->
+          </div>
+        </div>
+      </div>
+
+      <div class="custom-block custom-block-profile bg-white" >
+        <h6 class="mb-4">Rating</h6>
+      <app-rating></app-rating>
+
+
+
+      </div>
+    </div>
+
+    <div class="col-lg-5 col-12">
+      <div class="custom-block custom-block-contact" *ngFor="let lawyer of lawyers">
+        <h6 class="mb-4" style="font-size:30px;">Bio</h6>
+
+        <p class="custom-bio-text">{{lawyer.info}}</p> <!-- Improved text styling -->
+      </div>
+    </div>
+
+  </div>
+
+</main>
